--- a/eb-flask/requirements.txt
+++ b/eb-flask/requirements.txt
@@ -10,6 +10,7 @@ dockerpty==0.4.1
 docopt==0.6.2
 docutils==0.12
 Flask==0.11.1
+Flask-HTTPAuth==3.2.1
 Flask-SQLAlchemy==2.1
 itsdangerous==0.24
 Jinja2==2.8
