--- a/eb-flask/requirements.txt
+++ b/eb-flask/requirements.txt
@@ -1,9 +1,12 @@
+click==6.6
 Flask==0.11.1
+Flask-Login==0.3.2
 Flask-SQLAlchemy==2.1
 itsdangerous==0.24
 Jinja2==2.8
 jmespath==0.9.0
 MarkupSafe==0.23
+MySQL-python==1.2.5
 passlib==1.6.5
 pathspec==0.3.4
 python-dateutil==2.5.3
