--- a/ebsflask/.ebextensions/app.config
+++ b/ebsflask/.ebextensions/app.config
@@ -1,8 +1,11 @@
+packages:
+  yum:
+    mysql-devel: []
 
 files:
   "/opt/python/log/application.log" :
    mode: "000666"
-   owner: ec2-user
-   group: ec2-user
+   owner: wsgi
+   group: wsgi
    content: |
       # Python log file
