update application, config and ebs

--- a/ebsflask/.ebextensions/app.config
+++ b/ebsflask/.ebextensions/app.config
@@ -3,9 +3,9 @@ packages:
     mysql-devel: []
 
 files:
-  "/opt/python/log/application.log" :
-   mode: "000666"
-   owner: wsgi
-   group: wsgi
-   content: |
-      # Python log file
+  "/opt/elasticbeanstalk/tasks/bundlelogs.d/applogs.conf":
+      mode: "000666"
+      owner: wsgi
+      group: wsgi
+      content: |
+         /opt/python/log/application.log
