update to streamhandler

--- a/ebsflask/.ebextensions/app.config
+++ b/ebsflask/.ebextensions/app.config
@@ -4,8 +4,8 @@ packages:
 
 files:
   "/opt/elasticbeanstalk/tasks/bundlelogs.d/applogs.conf":
-      mode: "000666"
-      owner: wsgi
-      group: wsgi
+      mode: "000755"
+      owner: root
+      group: root
       content: |
-         /opt/python/log/application.log
+         /opt/python/log/*.log
