--- a/ebsflask/.ebextensions/app.config
+++ b/ebsflask/.ebextensions/app.config
@@ -9,3 +9,11 @@ files:
       group: root
       content: |
          /opt/python/log/*.log
+
+files:
+ "/etc/httpd/conf.d/wsgihacks.conf":
+   mode: "000644"
+   owner: root
+   group: root
+   content: |
+     WSGIPassAuthorization On
